[tool.poetry]
name = "rss-reader"
version = "3.5.1"
description = "A simple CLI rss reader"
authors = ["dhvcc <1337kwiz@gmail.com>"]
license = "GPLv3"
readme = "README.md"
keywords = [
    "python",
    "python3",
    "cli",
    "rss",
    "reader",
    "gplv3",
    "typed",
    "typed-python",
]
classifiers = [
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.scripts]
rss-reader = "rss_reader.__main__:main"

[tool.poetry.urls]
"Homepage" = "https://dhvcc.github.io/rss-reader"
"Source" = "https://github.com/dhvcc/rss-reader"
"Bug Tracker" = "https://github.com/dhvcc/rss-reader/issues"

[tool.poetry.dependencies]
python = "^3.7"
rss-parser = "^0.2.3"
pathvalidate = "^2.4.1"
requests = "*"
pydantic = "*"
weasyprint = "^51"
colorama = "^0.4.3"
Jinja2 = "*"
ebooklib = "^0.17.1"

[tool.poetry.extras]
speedups = ["ujson"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.12.0"
flake8 = "^3.9.0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37', 'py38']
exclude = '''
(
    \.eggs
  | \.git
  | build
  | dist
  | venv
  | .venv
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_gitignore = true
skip_glob = ['**/.venv/**']
